== 0.3.1

* 1 major improvement
  * Rails 3 support for generators [H.J. Blok, szimek]


== 0.3.0

* 2 major improvements
  * Mechanism for registering ORM adapters for pickle [Daniel Neighman]
  * Adapters for ActiveRecord and DataMapper [Josh Bassett, Daniel Neighman]


== 0.2.12

* 1 bugfix
  * script/generate pickle paths now works correctly with cucumber-rails 0.3.2


== 0.2.11

* 1 improvement
  * use correct type when converting STI pickle model to attributes 


== 0.2.10

* 2 improvements
  * pickle backend is rails 3 compatible (but generators are not yet)
  * modular Rakefile, devs can run only what they're interested in without having to install all gems


== 0.2.9 - 27 Apr 2010 (the #railscamp7 release)

* 5 improvements
  * Fixed problem with verifying model attribute using strings with escaped quotes [Michael MacDonald]
  * Added handling for positive and negative floats [Michael MacDonald, #railscamp7]
  * Added handling of ruby integer syntax (e.g. 1_000_000) [Ian White]
  * Modified the way pickle handles predicates to match rspec [Michael MacDonald, #railscamp7]
  * Added step to assert size of an association (e.g. Then the user should have 4 friends) [Ian White]


== 0.2.8 - 5 Apr 2010

* 1 minor improvement
  * 'Then show me the email' works as expected now [#18]


== 0.2.7 - 5 Apr 2010

* 1 minor improvement
  * just rake 'rake cucumber' and a rails app will be setup for you if required (rails 2.3 only ATM)


== 0.2.6 - 5 Apr 2010

* 2 improvements
  * running specs is now doable without being in a rails app - just do 'rake spec'
  * running features is more straightforward, 'rake cucumber' then follow the instructions
  
  
== 0.2.5 - 17 Mar 2010

* 2 improvements
  * Bugfix for find_models_via_table (failing to find models was not causing an error) [Chris Flipse]
  * find_models_via_table & create_models_via_table return the found/created models [Chris Flipse, Ian White]


== 0.2.4 - 9 Mar 2010

* 1 major improvement